DesignProject/tests/error/error04_missing_parens.src
// Error test: Missing parentheses in function call
// Expected: Syntax error - missing parentheses

func test() => integer {
  local x : integer;
  x := test;
  return (x);
}

